fetch local and fetch using json placeholder examples added

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+  <h2 class="fetchLocal">Fetch Local (Async/Await)</h2>
   <div id="studentDiv">
-    <h1>Students</h1>
+    <h3>Students</h1>
   </div>
 
   <div id="teacherDiv">
-    <h1>Teachers</h1>
+    <h3>Teachers</h1>
   </div>
-  <script src="index.js"></script>
+  <button class="next" ><a href="blog.html" class="nav-link">Next</a></button>
+  <script src="school.js"></script>
 </body>
 </html>
