--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <div id="teacherDiv">
     <h3>Teachers</h1>
   </div>
+
+  <div id="classesDiv">
+    <h3>Classes</h1>
+  </div>
   <button class="next" ><a href="blog.html" class="nav-link">Next</a></button>
   <script src="school.js"></script>
 </body>
